# implicitpipe

./: .gitignore  .stylish-haskell.yaml  GPipe-ImplicitCAD.cabal  LICENSE  README.md  cabal.project  cabal.project.local.ci  ci.dhall  ci.sh  default.nix  implicitpipe.cabal  overlay.nix  shell.nix  stack.yaml
.github/workflows/: ci.yaml
GPipe-Test/: GPipe-Test.cabal  default.nix  stack.yaml
GPipe-Test/src/: Main.hs
anim/: Anim.hs  Ease.hs  anim.cabal
app/: Animate.hs  Main.hs
example-escad/: header.escad  obj.escad
example-haskell/: SomeModule.hs  SomeOtherModule.hs
src/: Main.hs
src/Graphics/Implicit/: Viewer.hs
src/Graphics/Implicit/Export/: GL.hs
src/Graphics/Implicit/Viewer/: Config.hs  Demos.hs  Loaders.hs  Shaders.hs  Types.hs  Util.hs
