name:                GPipe-ImplicitCAD
version:             0.1.0.3
cabal-version:       >=1.10
build-type:          Simple
author:              copy+paste
license:             MIT

executable Main
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
                       base
                     , GPipe >=2.2
                     , GPipe-GLFW >=1.4
                     , implicit
                     , vector-space
                     , linear
                     , JuicyPixels
  ghc-options:         -Wall -threaded -Wno-missing-signatures
  default-language:    Haskell2010
