name:                GPipe-ImplicitCAD
version:             0.1.0.3
synopsis:            GPipe based viewer for ImplicitCAD
cabal-version:       >=1.10
build-type:          Simple
author:              Richard Marko
copyright:           2020 Richard Marko
maintainer:          srk@48.io
category:            Graphics
license:             MIT

executable Main
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
                       base
                     , GPipe >=2.2
                     , GPipe-GLFW >=1.4
                     , GLFW-b
                     , implicit
                     , vector-space
                     , linear
  ghc-options:         -O2 -Wall -threaded -Wno-missing-signatures -rtsopts "-with-rtsopts -N -qg"
  default-language:    Haskell2010
