name:                GPipe-Test
version:             0.1.0.1
cabal-version:       >=1.10
build-type:          Simple
author:              copy+paste

executable Main
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
                       base
                     , GPipe
                     , transformers
                     , GPipe-GLFW >=1.2.2
                     , linear
                     , JuicyPixels
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
