name:                GPipe-Test
version:             0.1.0.2
cabal-version:       >=1.10
build-type:          Simple
author:              copy+paste
license:             MIT

executable Main
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
                       base
                     , GPipe
                     , GPipe-GLFW >=1.3
                     , linear
                     , JuicyPixels
  ghc-options:         -Wall -threaded -Wno-missing-signatures
  default-language:    Haskell2010
