name:                anim
version:             0.1.0.0
synopsis:            Higher-order Animations a la Reanimate.Animation
cabal-version:       >=1.10
build-type:          Simple
author:              Richard Marko
copyright:           2020 Richard Marko
maintainer:          srk@48.io
category:            Graphics
license:             MIT

library
  hs-source-dirs:      .
  ghc-options:         -O2 -Wall
  build-depends:
                       base
  default-language:    Haskell2010
  exposed-modules:     Anim
                     , Ease
